comando echo > cambios de caracteres de salida

--- a/datacenter-madrid/check-alive.yml
+++ b/datacenter-madrid/check-alive.yml
@@ -2,7 +2,7 @@
 - hosts: all
   tasks:
     - name: hostalive
-      shell: echo '++++++++++++++';date;hostname;echo '++++++++++++++';netstat -tpln
+      shell: echo '---------------';date;hostname;echo '---------------';netstat -tpln
       register: hostalive
 
     - debug: var=hostalive.stdout_lines
