modificado deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,33 +3,25 @@
   tasks:
     
     - name: stop-vm
-      shell:
-        - echo '---------------';date;echo '---------------'
-        - for k in {{vm_name}};do VBoxManage controlvm {${k}} poweroff;echo '<< '{${k}}' IS STOPPED >>';done
+      shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage controlvm {${k}} poweroff;echo '<< '{${k}}' IS STOPPED >>';done
       register: stopvm
     
     - debug: var=stopvm.stdout_lines
 
     - name: create-image-vm
-      shell: 
-        - echo '---------------';date;echo '---------------'
-        - for k in {{vm_name}};do VBoxManage export {${k}} -o {{path_image}}{${k}}.ova;echo '<< IMAGE CREATED >>';done
+      shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage export {${k}} -o {{path_image}}{${k}}.ova;echo '<< IMAGE CREATED >>';done
       register: createimage
 
     - debug: var=createimage.stdout_lines
 
     - name: deploy-vm
-      shell:
-        - echo '---------------';date;echo '---------------'  
-        - for k in {{vm_name}};do VBoxManage import {{path_image}}{${k}}.ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}} | grep 'imported';echo '<< DEPLOY FINISHED >>';done
+      shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage import {{path_image}}{${k}}.ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}} | grep 'imported';echo '<< DEPLOY FINISHED >>';done
       register: deployvm
 
     - debug: var=deployvm.stdout_lines
 
     - name: start-vm
-      shell:
-        - echo '---------------';date;echo '---------------'
-        - for k in {{vm_name}};do VBoxManage startvm {${k}} --type headless;echo '<< '{${k}}' IS RUNNING >>';done
+      shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage startvm {${k}} --type headless;echo '<< '{${k}}' IS RUNNING >>';done
       register: startvm
 
     - debug: var=startvm.stdout_lines
