restaurado original >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -2,26 +2,26 @@
 - hosts: all
   tasks:
     
-    - name: stop-vms
-      shell: VBoxManage controlvm {{vm_name}}poweroff;done 
-      register: stopvms
+    - name: stop-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage controlvm {{vm_name}} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'
+      register: stopvm
+    
+    - debug: var=stopvm.stdout_lines
 
-    - debug: var=stopvms.stdout_lines
+    - name: create-image-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
+      register: createimage
 
-      #- name: create-image-vm
-      #shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage export {${k}} -o {{path_image}}{${k}}.ova done;echo '<< IMAGE CREATED >>'
-      #register: createimage
+    - debug: var=createimage.stdout_lines
 
-      #- debug: var=createimage.stdout_lines
+    - name: deploy-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage import {{path_image}}{{vm_name}}.ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}} | grep 'imported';echo '<< DEPLOY FINISHED >>'
+      register: deployvm
 
-      #- name: deploy-vm
-      #shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage import {{path_image}}{${k}}.ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value} done;echo '<< DEPLOY FINISHED >>'
-      #register: deployvm
+    - debug: var=deployvm.stdout_lines
 
-      #- debug: var=deployvm.stdout_lines
+    - name: start-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage startvm {{vm_name}} --type headless;echo '<< '{{vm_name}}' IS RUNNING >>'
+      register: startvm
 
-      #- name: start-vm
-      # shell: echo '---------------';date;echo '---------------';for k in {{vm_name}};do VBoxManage startvm {${k}} --type headless done;echo '<< VM IS RUNNING >>'
-      #register: startvm
-
-      #- debug: var=startvm.stdout_lines
+    - debug: var=startvm.stdout_lines
