modified original >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,10 +3,12 @@
   tasks:
     
     - name: stop-vm
-      raw: echo '---------------';date;echo '---------------'
-      raw: for i in {{vm_name}};do
-      raw: VBoxManage controlvm {${i}} poweroff;echo '<< '{${i}}' IS STOPPED >>'
-      raw: done
+      shell: 
+         - echo '---------------';date;echo '---------------'
+         - [for i in {{vm_name}};
+            do
+            VBoxManage controlvm {${i}} poweroff;echo '<< '{${i}}' IS STOPPED >>'
+            done]
       register: stopvm
     
       # - debug: var=stopvm.stdout_lines
