modified >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -5,10 +5,7 @@
     - name: stop-vm
       shell: 
          - echo '---------------';date;echo '---------------'
-         - [for i in vm_name;
-            do
-            VBoxManage controlvm {${i}} poweroff;echo '<< '{${i}}' IS STOPPED >>'
-            done]
+         - for i in {{vm_name}};do VBoxManage controlvm {${i}} poweroff;echo '<< '{${i}}' IS STOPPED >>';done
       register: stopvm
     
     - debug: var=stopvm.stdout_lines
