modified >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,9 +3,7 @@
   tasks:
     
     - name: stop-vm
-      shell: 
-         - echo '---------------';date;echo '---------------'
-         - for i in {{vm_name}};do VBoxManage controlvm {${i}} poweroff;echo '<< '{${i}}' IS STOPPED >>';done
+      shell: for i in {{vm_name}};do VBoxManage controlvm {${i}} poweroff;echo '<< '{${i}}' IS STOPPED >>';done
       register: stopvm
     
     - debug: var=stopvm.stdout_lines
