modified >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,8 +3,7 @@
   tasks:
     
     - name: stop-vm
-      shell: for i in {{vm_name}};do VBoxManage controlvm {$i} poweroff;done
-      #echo '<< '{${i}}' IS STOPPED >>'
+      shell: VBoxManage controlvm {{vm_name[0,1]}} poweroff;echo '<< '{{vm_name[0,1]}}' IS STOPPED >>'
       register: stopvm
     
     - debug: var=stopvm.stdout_lines
