--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,7 @@
   tasks:
     
     - name: stop-vm
-      shell: VBoxManage controlvm {{vm1}}{{vm2}} poweroff;echo '<< STOPPED '{{vm1}}' AND '{{vm2}}' >>'
+      shell: VBoxManage controlvm {{vms}} poweroff;echo '<< '{{vms}}' IS STOPPED >>'
       register: stopvm
     
     - debug: var=stopvm.stdout_lines
