modified >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,9 +3,10 @@
   tasks:
     
     - name: stop-vm
-      shell: VBoxManage controlvm {{vms}} poweroff;echo '<< '{{vms}}' IS STOPPED >>'
-      register: stopvm
-    
+            shell: VBoxManage controlvm {{vms}} poweroff;echo '<< '{{vms}}' IS STOPPED >>'
+            register: stopvm
+    - var:
+            vms: all      
     - debug: var=stopvm.stdout_lines
 
       # - name: create-image-vm
