--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,7 @@
   tasks:
     
     - name: stop-vm
-            shell: VBoxManage controlvm {{vms}} poweroff;echo '<< '{{vms}}' IS STOPPED >>'
+            shell: VBoxManage controlvm {{vms}} poweroff;echo '<< ''{{vms}}'' IS STOPPED >>'
             register: stopvm
     - var:
             vms: all      
