modified >  deploy-vms-massive.yml en la rama cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,7 @@
   tasks:
     
     - name: stop-vm
-            shell: VBoxManage controlvm {{vms}} poweroff
+            shell: VBoxManage controlvm "{{vms}}" poweroff
             register: stopvm
     - var:
             vms: all      
