--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -5,8 +5,7 @@
     - name: stop-vms
       stop_virtual_machines:
       {% for vm in vms_names %}
-       - VBoxManage controlvm {{ vm }} poweroff
-       - echo '<< '{{ vm }}' IS STOPPED >>'  
+      {{shell: VBoxManage controlvm {{ vm }} poweroff;echo '<< '{{ vm }}' IS STOPPED >>'}}  
       {% endfor %}
       register: stopvms
              
