--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,13 +3,10 @@
   tasks:
     
     - name: stop-vms
-      stop_virtual_machines:
       {% for vm in vms_names %}
-      {{shell: VBoxManage controlvm {{ vm }} poweroff;echo '<< '{{ vm }}' IS STOPPED >>'}}  
+      {{VBoxManage controlvm {{ vm }} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'}}  
       {% endfor %}
-      register: stopvms
              
-    - debug: var=stopvms.stdout_lines
 
    # - name: create-image-vm
    #   shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
