--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -2,10 +2,12 @@
 - hosts: all
   tasks:
     
-    - name: stop-vms
-      {% for vm in vms_names %}
-      {{VBoxManage controlvm {{ vm }} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'}}  
-      {% endfor %}
+    - 
+      name: "stop-vms {% for vm in vms_names %} {{VBoxManage controlvm {{ vm }} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'}} {% endfor %}"
+      #- name: stop-vms
+      #{% for vm in vms_names %}
+      #{{VBoxManage controlvm {{ vm }} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'}}  
+      #{% endfor %}
              
 
    # - name: create-image-vm
