--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: all
-  tasks:
-      - name: stop-vms
-      {% for vm in vms_names %}
-      - VBoxManage controlvm {{ vm }} poweroff  
-      {% endfor %}
+- 
+  hosts: all
+  tasks: 
+    - 
+      name: "stop-vms {% for vm in vms_names %} - VBoxManage controlvm {{ vm }} poweroff {% endfor %}"
+
              
 
    # - name: create-image-vm
