modified >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,7 @@
   hosts: all
   tasks: 
     - 
-        stop-vms: {% for vm in vms_names %} {{VBoxManage controlvm {{ vm }} poweroff}} {% endfor %}
+        stop-vms: "{% for vm in vms_names %} {{VBoxManage controlvm {{ vm }} poweroff}} {% endfor %}"
 
              
 
