--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,9 +1,8 @@
 ---
-- 
-  hosts: all
-  tasks: 
-    - 
-        stop-vms: "{% for vm in vms_names %} {{VBoxManage controlvm {{ vm }} poweroff}} {% endfor %}"
+hosts: all
+  - tasks: 
+        - name: stop-vms
+          shell: "{% for vm in vms_names %} {{VBoxManage controlvm {{ vm }} poweroff}} {% endfor %}"
 
              
 
