--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,10 @@
   tasks:
     
     - name: stop-vm
-      shell: {% for vm in vms_names %} {{VBoxManage controlvm {{ vm }} poweroff}} {% endfor %}
+      script: 
+         - for vm in ${vms_names} ; do      
+           "VBoxManage controlvm $vm poweroff"
+           done
     
 
     - name: create-image-vm
