--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,7 @@
   tasks:
     
     - name: stop-vms
-      shell: for vm in {{vms_names}}; do echo {{$vm}}; done
+      shell: for vm in {{vms_names}}; do echo {{vm}}; done
       register: stopvms
     - debug: var=stopvms.stdout_lines
 
