--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -2,10 +2,11 @@
 - hosts: all
   tasks:
     
-    - name: stop-vms
-      shell: for vm in {{vms_names}}; do echo {${vm}}; done
-      register: stopvms
-    - debug: var=stopvms.stdout_lines
+    - name: stop-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage controlvm {{vm_name}} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'
+      register: stopvm
+    
+    - debug: var=stopvm.stdout_lines
 
     - name: create-image-vm
       shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
