--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
   tasks:
-     "{% for vm in vms_names %}
-      echo {{ vm }};
-     {% endfor %}"
+     {% for vm in vms_names() -%}
+      echo "{{ vm }}"
+     {% endfor -%}"
