changed >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,5 +1,5 @@
 ---
 - hosts: all
-  - tasks:
+  tasks:
       - name: shutdown-vms
-          - shell: {% for vm in vms_names %} echo {{ vm }}; {% endfor %}
+      - shell: {% for vm in vms_names %} echo {{ vm }}; {% endfor %}
