--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,10 +1,27 @@
 ---
-vlans:
-  10: internal
-  20: client
-  30: internet
+- hosts: all
+  tasks:
+    
+    - name: stop-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage controlvm {{vm_name}} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'
+      register: stopvm
+    
+    - debug: var=stopvm.stdout_lines
 
-{% for vlan_id, name in vlans.items() %}
-     vlan {{ vlan_id }}
-     name {{ name }}
-{% endfor %}
+    - name: create-image-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
+      register: createimage
+
+    - debug: var=createimage.stdout_lines
+
+    - name: deploy-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage import {{path_image}}{{vm_name}}.ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}} | grep 'imported';echo '<< DEPLOY FINISHED >>'
+      register: deployvm
+
+    - debug: var=deployvm.stdout_lines
+
+    - name: start-vm
+      shell: echo '---------------';date;echo '---------------';VBoxManage startvm {{vm_name}} --type headless;echo '<< '{{vm_name}}' IS RUNNING >>'
+      register: startvm
+
+    - debug: var=startvm.stdout_lines
