--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,25 +3,25 @@
   tasks:
     
     - name: stop-vm
-      shell: echo '---------------';date;echo '---------------';VBoxManage controlvm {{vm_name}} poweroff;echo '<< '{{vm_name}}' IS STOPPED >>'
+      shell: echo '---------------';date;echo '---------------';VBoxManage controlvm "{{item}}" poweroff;echo '<< '"{{item}}"' IS STOPPED >>'
       register: stopvm
     
     - debug: var=stopvm.stdout_lines
 
     - name: create-image-vm
-      shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
+      shell: echo '---------------';date;echo '---------------';VBoxManage export "{{item}}" -o {{path_image}}"{{item}}".ova;echo '<< IMAGE CREATED >>'
       register: createimage
 
     - debug: var=createimage.stdout_lines
 
     - name: deploy-vm
-      shell: echo '---------------';date;echo '---------------';VBoxManage import {{path_image}}{{vm_name}}.ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}} | grep 'imported';echo '<< DEPLOY FINISHED >>'
+      shell: echo '---------------';date;echo '---------------';VBoxManage import {{path_image}}"{{item}}".ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}} | grep 'imported';echo '<< DEPLOY FINISHED >>'
       register: deployvm
 
     - debug: var=deployvm.stdout_lines
 
     - name: start-vm
-      shell: echo '---------------';date;echo '---------------';VBoxManage startvm {{vm_name}} --type headless;echo '<< '{{vm_name}}' IS RUNNING >>'
+      shell: echo '---------------';date;echo '---------------';VBoxManage startvm "{{item}}" --type headless;echo '<< '"{{item}}"' IS RUNNING >>'
       register: startvm
 
     - debug: var=startvm.stdout_lines
