--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,15 +1,8 @@
 ---
 - hosts: all
   tasks:
- 
-     - name: stop-vm
-       command: VBoxManage controlvm "{{ item }}" poweroff
- 
-     - name: create-image-vm
-       command: VBoxManage export "{{ item }}" -o {{path_image}}"{{ item }}".ova
-
-     - name: deploy-vm
-       command: VBoxManage import {{path_image}}"{{ item }}".ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}}
- 
-     - name: start-vm
-       command: VBoxManage startvm "{{ item }}" --type headless
+    - name: massive-operations
+      command: VBoxManage controlvm "{{ item }}" poweroff;VBoxManage export "{{ item }}" -o {{path_image}}"{{ item }}".ova;VBoxManage import {{path_image}}"{{ item }}".ova --vsys 0 --memory {{mem_value}} --cpus {{cpu_value}};VBoxManage startvm "{{ item }}" --type headless
+    - with_items:
+          - CentOS_8_template
+          - rhel_8_ansible
