modified >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,8 +3,9 @@
   tasks:
     
     - name: stop-vm
-       shell: VBoxManage controlvm {{ item.name }} poweroff
-       loop: "{{ vmachines }}"     
+       shell: VBoxManage controlvm "{{ item.name }}" poweroff
+       with_items:
+         - "{{ vmachines }}"     
        
       # - name: create-image-vm
       #shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
