modified >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,7 +3,7 @@
   tasks:
     
     - name: stop-vm
-       shell: VBoxManage controlvm "{{ item.name }}" poweroff
+       shell: "VBoxManage controlvm {{ item.name }} poweroff"
        with_items:
          - "{{ vmachines }}"     
        
