--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -2,10 +2,10 @@
 - hosts: all
   tasks:
     
-    - name: stop-vm
-       shell: "VBoxManage controlvm {{ item.name }} poweroff"
-       with_items:
-         - "{{ vmachines }}"     
+    - name: stop-vms
+       shell: "VBoxManage controlvm {{ item }} poweroff"
+       with_items: "{{vmachines}}"
+       register: stop-vms
        
       # - name: create-image-vm
       #shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
