modified >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: all
+- name: stop vms
+  hosts: all
   tasks:
-   - name: stop-vms
      VBoxManage: "{{item.command}} {{item.name}} {{item.state}}"
      with_items:
              - { command: 'controlvm', name: 'CentOS_8_template', state: 'poweroff' }
