modified >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,11 +3,24 @@
   tasks:
          
   - name: stop vms
-     VBoxManage: "{{item.command}} {{item.vmname}} {{item.state}}"
-     with_items:
-             - { command: 'controlvm', vmname: 'CentOS_8_template', state: 'poweroff' }
-             - { command: 'controlvm', vmname: 'CentOS_8_template', state: 'poweroff' }
-...  
+    shell: VBoxManage controlvm {{ item.vmname }} poweroff
+    with_subelements:
+      - vmachines
+      - hardware  
+
+    vmachines:
+        - vmname: CentOS_8_template
+          hardware:
+              - cpu: 1
+                ram: 2048
+        - vmname: rhel_8_ansible
+          hardware:
+              - cpu: 2
+                ram: 1024     
+...                  
+
+
+
       # - name: create-image-vm
       #shell: echo '---------------';date;echo '---------------';VBoxManage export {{vm_name}} -o {{path_image}}{{vm_name}}.ova;echo '<< IMAGE CREATED >>'
       #register: createimage
