--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -8,15 +8,17 @@
       - vmachines
       - hardware  
 
+   -vars:    
     vmachines:
-        - vmname: CentOS_8_template
-          hardware:
-              - cpu: 1
-                ram: 2048
-        - vmname: rhel_8_ansible
-          hardware:
-              - cpu: 2
-                ram: 1024     
+      - vmname: CentOS_8_template
+        hardware:
+           - cpu: 1
+             ram: 2048
+
+      - vmname: rhel_8_ansible
+        hardware:
+           - cpu: 2
+             ram: 1024     
 ...                  
 
 
