modified >  deploy-vms-massive.yml rama: cuisine

--- a/project-datacenter-madrid/deploy-vms-massive.yml
+++ b/project-datacenter-madrid/deploy-vms-massive.yml
@@ -3,11 +3,14 @@
   tasks:
          
   - name: stop vms
-    shell: VBoxManage controlvm {{ item.vmname }} poweroff
-    with_subelements:
-      - vmachines
-      - hardware  
-...                  
+    # shell: VBoxManage controlvm {{ item.vmname }} poweroff
+    #register: vmachines
+    -debug: msg="{{ item.vmname }} IS STTOPED" 
+     ignore_errors: true
+     with_subelements:
+             - "{{ vmachines }}"     
+             - hardware
+
 
 
 
